syntax = "proto3";
package AOSProject_2;
option go_package ="./AOSProject_2";



message Key{
    string Id=1;
    uint64 num=2;
    string nodes=3;
    string flag=4;
}

message Wkey{
    Key key=1;
    string name=2;
    uint64 low=3;
    uint64 mid=4;
    uint64 high=5;
}


message CResponse{
    string res=1;
}
message DResponse{

}
message WRResponse{
    uint64 res=1;
    string err=2;
}
message ARRead{
    string id=1;
}

message ARReadRes{
    string id=1;
    string name=2;
    uint64 low =3;
    uint64 mid=4;
    uint64 high=5;
    string pval=6;
    string fval=7;
    uint64 counter=8;
    string msg=9;
}


message ARRollbackReq{
    string id=1;
    string name=2;
    uint64 low =3;
    uint64 mid=4;
    uint64 high=5;
    string pval=6;
    string fval=7;
    uint64 counter=8;
    string writer=9;
    string reader=10;
}

message ARWriteRes{
    string msg=1;
}

message ARWrite{
    string id=1;
    string name=2;
    uint64 low =3;
    uint64 mid=4;
    uint64 high=5;
    string pval=6;
    string fval=7;
    uint64 counter=8;
    string flag=9;
}


service Token{
    rpc createToken (Key) returns (CResponse) {}
    rpc writeToken (Wkey) returns (WRResponse) {}
    rpc readToken (Key) returns (WRResponse) {}
    rpc dropToken (Key) returns (DResponse) {}
    rpc writeARToken (ARWrite) returns (ARWriteRes){}
    rpc readARToken (ARRead) returns (ARReadRes) {}
    rpc rollbackARToken (ARRollbackReq) returns (ARWriteRes) {} 
    rpc rollbackDropARToken (ARRollbackReq) returns (ARWriteRes) {}    
}